--- a/Views/Actors/Edit.cshtml
+++ b/Views/Actors/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Actor
 @{
-    ViewData["Title"] = "Add A New Actor";
+    ViewData["Title"] = "Update Actor";
 }
 <div class="row text">
     <div class="col-md-8 offset-2">
@@ -9,7 +9,7 @@
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
-                <form asp-action="Create">
+                <form asp-action="Edit">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group text-center">
                         <img id="ProfilePicturePreview" class="border-info rounded-circle " style="max-width:150px" />
@@ -31,7 +31,7 @@
                     </div>
 
                     <div class="form-group" style="margin-top:15px">
-                        <input type="submit" value="Create" class="btn btn-outline-success float-md-end" />
+                        <input type="submit" value="Update" class="btn btn-outline-success float-md-end" />
                         <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
                     </div>
                 </form>
@@ -46,10 +46,10 @@
             var output = document.getElementById('ProfilePicturePreview');
             output.src = $("#ProfilePictureUrl").val();
         })
-            $('#ProfilePictureUrl').on('change', function () {
-                var output = document.getElementById('ProfilePicturePreview');
-                output.src = $(this).val();
-            });
-        
-    </script> 
+        $('#ProfilePictureUrl').on('change', function () {
+            var output = document.getElementById('ProfilePicturePreview');
+            output.src = $(this).val();
+        });
+
+    </script>
 }
