--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -15,6 +15,7 @@
                             <p class="card-text">
                                 <h5 class="card-title">
                                     @item.Name
+                                    <a class="text-white float-md-end" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i></a>
                                 </h5>
                             </p>
                         </div>
@@ -50,7 +51,7 @@
                     <div class="col-md-12">
                         <div class="card-footer ">
                             <p class="card-text">
-                                <a class="btn btn-outline-primary float-right">
+                                <a class="btn btn-outline-primary float-md-end" asp-action="Details" asp-route-id="@item.Id">
                                     <i class="bi bi-eye-fill"></i> Show Details
                                 </a>
                                 <a class="btn btn-success text-white">
@@ -64,3 +65,4 @@
         </div>
     }
 </div>
+@await Html.PartialAsync("_CreateItem","Movies")
