--- a/Views/Cinemas/Details.cshtml
+++ b/Views/Cinemas/Details.cshtml
@@ -28,9 +28,11 @@
                     <input asp-for="Description" class="form-control" readonly />
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
-
                 <div class="form-group" style="margin-top:15px">
-                    <a class="btn btn-outline-success float-md-end" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <a class="btn btn-outline-success float-md-end" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+                    }
                     <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
                 </div>
             </div>
