--- a/Views/Orders/Index.cshtml
+++ b/Views/Orders/Index.cshtml
@@ -13,7 +13,10 @@
                     <th>Order ID</th>
                     <th>Items</th>
                     <th>Total</th>
-                    <th>Uder</th>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <th>User</th>
+                    }
                 </tr>
             </thead>
             <tbody>
@@ -34,10 +37,13 @@
                             </ul>
                         </td>
                         <td class="align-middle">@order.OrderItems.Select(m=>m.Movie.Price*m.Amount).Sum().ToString("c")</td>
-                        <td class="align-middle"> - </td>
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
+                            <td class="align-middle"> @order.User.FullName </td>
+                        }
                     </tr>
                 }
             </tbody>
         </table>
-    </div> 
+    </div>
 </div>
