--- a/Views/Producers/Details.cshtml
+++ b/Views/Producers/Details.cshtml
@@ -28,11 +28,13 @@
                     <input asp-for="Bio" class="form-control" readonly />
                     <span asp-validation-for="Bio" class="text-danger"></span>
                 </div>
-
                 <div class="form-group" style="margin-top:15px">
+                @if(User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
                     <a class="btn btn-outline-success float-md-end" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
-                    <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
-                </div>
+                        }
+                        <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
+                    </div>
             </div>
         </div>
     </div>
