--- a/Views/Producers/Index.cshtml
+++ b/Views/Producers/Index.cshtml
@@ -12,8 +12,10 @@
                     <th>@Html.DisplayNameFor(model=>model.ProfilePictureUrl)</th>
                     <th>@Html.DisplayNameFor(model=>model.FullName)</th>
                     <th>@Html.DisplayNameFor(model=>model.Bio)</th>
+                    @if(User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
                     <th>Actions</th>
-
+                        }
                 </tr>
             </thead>
             <tbody>
@@ -29,12 +31,14 @@
                         <td class="align-middle">
                             @Html.DisplayFor(modelItem=>item.Bio)
                         </td>
-                        <td class="align-middle">
-                            <a class="btn btn-outline-primary" asp-controller="Producers" asp-action="Edit" asp-route-id="@item.Id" ><i class="bi bi-pencil-square"></i>Edit</a>
-                            <a class="btn btn-outline-info" asp-controller="Producers" asp-action="Details" asp-route-Id="@item.Id"><i class="bi bi-eye"></i>Details</a>
-                            <a class="btn btn-danger text-white" asp-controller="Producers" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash"></i>Delete</a>
-
-                        </td>
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
+                            <td class="align-middle">
+                                <a class="btn btn-outline-primary" asp-controller="Producers" asp-action="Edit" asp-route-id="@item.Id" ><i class="bi bi-pencil-square"></i>Edit</a> | 
+                                <a class="btn btn-outline-info" asp-controller="Producers" asp-action="Details" asp-route-Id="@item.Id"><i class="bi bi-eye"></i>Details</a> | 
+                                <a class="btn btn-danger text-white" asp-controller="Producers" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash"></i>Delete</a>
+                            </td>
+                        }
                     </tr>
                 }
             </tbody>
