--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using eTickets
+﻿@using Microsoft.AspNetCore.Identity;
+@using eTickets
 @using eTickets.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
