--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -57,7 +57,9 @@
                                 <a class="btn btn-outline-primary float-md-end" asp-action="Details" asp-route-id="@item.Id">
                                     <i class="bi bi-eye-fill"></i> Show Details
                                 </a>
-                                <a class="btn btn-success text-white" asp-action="AddToShoppingCart" asp-controller="Orders" asp-route-id="@item.Id">
+                                <a class="btn btn-success text-white @((DateTime.Now > item.EndDate)? "disabled" :"enabled")"
+                                asp-action="AddToShoppingCart"
+                                asp-controller="Orders" asp-route-id="@item.Id">
                                     <i class="bi bi-cart-plus" ></i> Add to Cart (Price @item.Price.ToString("c"))
                                 </a>
                             </p>
