Minor Updated on UI

--- a/Views/Actors/Index.cshtml
+++ b/Views/Actors/Index.cshtml
@@ -21,8 +21,8 @@
             <tbody>
                 @foreach (var item in Model)
                 {
-                    <tr>
-                        <td class="align-middle">
+                    <tr class="text-center">
+                        <td class="align-middle" >
                             <img class="rounded-circle" src="@item.ProfilePictureUrl" alt="@item.FullName" style="max-width:150px" />
                         </td>
                         <td class="align-middle">
