--- a/Views/Producers/Index.cshtml
+++ b/Views/Producers/Index.cshtml
@@ -21,7 +21,7 @@
             <tbody>
                 @foreach (var item in Model)
                 {
-                    <tr>
+                    <tr class="text-center">
                         <td class="align-middle">
                             <img class="rounded-circle" src="@item.ProfilePictureUrl" alt="@item.FullName" style="max-width:150px" />
                         </td>
