--- a/Views/Cinemas/Index.cshtml
+++ b/Views/Cinemas/Index.cshtml
@@ -8,7 +8,7 @@
     <div class="col-md-8 offset-md-2">
         <table class="table">
             <thead>
-                <tr>
+                <tr class="text-center">
                     <th>@Html.DisplayNameFor(model=>model.Logo)</th>
                     <th>@Html.DisplayNameFor(model=>model.Name)</th>
                     <th>@Html.DisplayNameFor(model=>model.Description)</th>
@@ -21,7 +21,7 @@
             <tbody>
                 @foreach (var item in Model)
                 {
-                    <tr>
+                    <tr class="text-center">
                         <td class="align-middle">
                             <img class="rounded-circle" src="@item.Logo" alt="@item.Name" style="max-width:150px" />
                         </td>
