--- a/Views/Orders/Index.cshtml
+++ b/Views/Orders/Index.cshtml
@@ -9,7 +9,7 @@
         </p>
         <table class="table">
             <thead>
-                <tr>
+                <tr class="text-center">
                     <th>Order ID</th>
                     <th>Items</th>
                     <th>Total</th>
